Fixed overflow on audit

--- a/src/t4mvc.web/wwwroot/sass/common.scss
+++ b/src/t4mvc.web/wwwroot/sass/common.scss
@@ -67,3 +67,7 @@ main {
     border: solid 3px green;
     border-radius: 48px;
 }
+
+#border-top-Audit { 
+    overflow-y: auto;
+}
